Do not load and install ILM policies when in DSL mode
When running in data stream lifecycle only mode skip parsing, loading,
and installing ILM policies.